test/spec_vectors/simd_f32x4_rounding/fail/module_21.wat
(module (func $f32x4.ceil-arg-empty (result v128) (f32x4.ceil)))